Added a profile pic and adjusted lines

--- a/login/index.html
+++ b/login/index.html
@@ -26,12 +26,16 @@
         </div>
 
         <div class="row">
-        
-            <p class="item1">Forget Password? </p>
+            <div class="bottom">
+              <div class="item1">hello</div>
+              <div class="item2 ">world</div>
+              <div class="item3 ">change</div>
+            </div>
+            <!-- <p class="item1">Forget Password? </p>
            <a href="" class="item2">Log in</a>
 
             <p class="item3">Don't have account? <a href="#">sign up</a> </p>
-
+ -->
 
         </div>
 
