--- a/signup/signup.html
+++ b/signup/signup.html
@@ -35,11 +35,9 @@
 
         <div class="row">
             <div class="col-12">
-                <div class="flex-container">
-                    <div class="lineleft"></div>
-                    <p>or continue with </p>
-                    <div class="lineright"></div>
-                </div>
+             <div class="flex-container">
+                <hr> CSS <hr>
+             </div>
             </div>
         </div>
         <div class="row">
